# chip8-gl

./: .gitmodules  CMakeLists.txt
res/: main.fshader  main.vshader
src/: main.cpp
